# long-arithmetic

./: .gitignore  CMakeLists.txt  calculatePi.cpp  runTests.cpp
hpp_files/: LongNumber.hpp
src/: ArithmeticOperations.cpp  AuxiliaryMethods.cpp  ComparisonOperations.cpp  LongNumber.cpp  PrintLongNumber.cpp  Tests.cpp  initFromString.cpp  main.cpp  toString.cpp
